--- a/flex-1/index.html
+++ b/flex-1/index.html
@@ -7,12 +7,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<header class="header">
-    <span class="item item-1">Gourmet au Catering</span>
-    <span class="item item-2">About</span>
-    <span class="item item-3">Menu</span>
-    <span class="item item-4">Contact</span>
-</header>
-    </div>
+<div class="flex-container">
+   <div class="flex-child1">child 1</div>
+   <div class="flex-child2">child 2</div>
+   <div class="flex-child3">child 3</div>
+   </div>
 </body>
 </html>
